gitops/clusters/prod/apps/nginx/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: nginx
spec:
  redirectScheme:
    scheme: https
    permanent: true
