gitops/clusters/prod/apps/nginx/ingressroute-http.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-http
  namespace: nginx
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`pavel-usanli.online`)
      kind: Rule
      middlewares:
        - name: redirect-https
      services:
        - name: nginx
          port: 80
