gitops/clusters/prod/apps/nginx/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: nginx
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pavel-usanli.online`)
      kind: Rule
      services:
        - name: nginx
          port: 80
  tls:
    secretName: nginx-tls
